# link_checker

./: .env.example  .gitignore  LinkChecker.spec  README.md  documentation.md  pyproject.toml
data/: sample_input.csv  sample_input.xlsx
src/link_checker/: cli.py  config.py  enums.py  logging_config.py  models.py  runner.py
src/link_checker/checkers/: base.py  http_checker.py
src/link_checker/io/: input_reader.py  report_writer.py
src/link_checker/rules/: base.py  event_page_rule.py  http_error_rule.py  registry.py  support_error_rule.py  technical_error_rule.py  timeout_rule.py
src/link_checker/services/: link_validation_service.py
src/link_checker/ui/: __init__.py  api.py  app.py
src/link_checker/ui/templates/: link_checker_ui.html
src/link_checker/utils/: text.py
tests/: test_cli.py  test_config.py  test_event_page_rule.py  test_http_checker.py  test_http_error_rule.py  test_input_reader.py  test_link_validation_service.py  test_models.py  test_report_writer.py  test_rule_registry.py  test_runner.py  test_support_error_rule.py  test_technical_error_rule.py  test_timeout_rule.py  test_ui_api.py  test_ui_app.py
